--- a/style.css
+++ b/style.css
@@ -122,14 +122,6 @@ a :hover {
   text-decoration: underline;
 }
 
-a .index {
-  font-size: 44pt;
-  font-family: poiret_one;
-  color: var(--dark-salmon);
-  text-transform: uppercase;
-  text-decoration: underline;
-}
-
 .em {
   font-family: limelight;
   font-size: 22pt;
@@ -157,7 +149,7 @@ hr {
 .triangle_down {
   background-color: var(--dark-purple);
   height: fit-content;
-  z-index: -1;
+  /* z-index: -1; */
   /* height: 400px; */
   position: relative;
   clip-path: polygon(0 0, 100% 0%, 100% 50%, 50% 100%, 0% 50%);
@@ -182,10 +174,6 @@ body {
 div p {
   font-family: abel;
   color: var(--minion-yellow);
-}
-
-main {
-  position: relative;
 }
 
 img {
@@ -252,7 +240,11 @@ article a {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    position: relative;
+    padding-bottom: 3rem;
+  }
+
+  footer a {
+    padding-bottom: 1rem;
   }
 
   footer div {
@@ -271,6 +263,7 @@ article a {
     height: 2rem;
     position: relative;
     top: -25px;
+    z-index: 200;
   }
 
   .top_separator {
@@ -284,6 +277,7 @@ article a {
     position: relative;
     top: 24px;
     left: -15px;
+    z-index: 200;
   }
 
   header img {
@@ -509,6 +503,7 @@ article a {
     height: 2rem;
     position: relative;
     top: -25px;
+    z-index: 200;
   }
 
   .top_separator {
@@ -521,6 +516,7 @@ article a {
     height: 3.5rem;
     position: relative;
     top: 27px;
+    z-index: 200;
   }
 
   .grafic_1 {
@@ -536,7 +532,8 @@ article a {
   .index_article {
     height: 450px;
     display: block;
-    padding-left: 10rem;
+    justify-items: left;
+    padding-left: 10%;
   }
 
   .droite {
@@ -548,6 +545,7 @@ article a {
 
   #one {
     padding-left: 10%;
+    z-index: -1;
   }
 
   #footerid {
