--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@
 
 /* STYLE */
 
-/* MOBILE */
-
 /* FONTS */
 @font-face {
   font-family: abel;
@@ -37,6 +35,10 @@
   font-family: poiret_one;
   src: url(fonts/poiretone.woff2);
 }
+
+/* FONTS END */
+
+/* COMMON CSS */
 
 h1 {
   font-size: 44pt;
@@ -128,6 +130,17 @@ a :hover {
   color: var(--yellow-orange);
 }
 
+article {
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 2rem;
+}
+
+main p {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 hr {
   width: 250px;
   margin-left: auto;
@@ -136,10 +149,6 @@ hr {
   background-color: var(--gold-metallic);
   border-style: none;
 }
-
-/* FONTS END */
-
-/* COMMON */
 
 * {
   margin: 0;
@@ -171,7 +180,7 @@ body {
   background-color: var(--russian-violet);
 }
 
-div p {
+p {
   font-family: abel;
   color: var(--minion-yellow);
 }
@@ -186,10 +195,12 @@ img {
   border-right: var(--gold-metallic);
 }
 
-#dokumentation {
-  background-image: url(assets/background.png);
-  background-size: 100%;
+.about {
+  top: -38%;
+  left: -10%;
 }
+
+/* index */
 
 .index_article {
   height: 450px;
@@ -207,20 +218,18 @@ img {
   left: 10%;
 }
 
-.about {
-  top: -38%;
-  left: -10%;
-}
-
 article h1,
 article a {
   align-self: center;
 }
 
+/* index */
+
+/* MOBILE */
+
 @media screen and (max-width: 750px) {
   header {
     background-color: var(--persian-indigo);
-
     padding-left: 2rem;
   }
 
@@ -239,18 +248,11 @@ article a {
     background-color: var(--violet-crayola);
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding-bottom: 3rem;
   }
 
+  footer div,
   footer a {
-    padding-bottom: 1rem;
-  }
-
-  footer div {
     align-self: center;
-    height: 1rem;
-    padding-bottom: 1rem;
   }
 
   .bottom_separator {
@@ -262,8 +264,8 @@ article a {
     width: 100%;
     height: 2rem;
     position: relative;
-    top: -25px;
-    z-index: 200;
+    top: -16px;
+    z-index: 15;
   }
 
   .top_separator {
@@ -360,6 +362,8 @@ article a {
 
   /* COMMON END */
 
+  /* index */
+
   .grafic_1 {
     z-index: 10;
     aspect-ratio: 200/130;
@@ -370,12 +374,6 @@ article a {
     left: 15%;
   }
 }
-
-/* INDEX */
-
-/* .grid_container {
-  display: grid;
-} */
 
 /* INDEX END */
 
