--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a :hover {
   color: var(--yellow-orange);
 }
 
-article {
+.text {
   padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 2rem;
@@ -149,6 +149,25 @@ hr {
   background-color: var(--gold-metallic);
   border-style: none;
 }
+
+.arrow_down_link {
+  background-image: url(assets/arrow_down.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: transparent;
+  position: absolute;
+  top: 0;
+  left: 38%;
+  width: 30%;
+  height: 30%;
+}
+
+#introvideo {
+  margin-top: 60%;
+  z-index: 100;
+}
+
 
 * {
   margin: 0;
