--- a/tema.css
+++ b/tema.css
@@ -7,6 +7,10 @@ h2 {
   display: none;
 }
 
+.border1 {
+  display: none;
+}
+
 @media screen and (min-width: 750px) {
   #tema1 {
     display: flex;
@@ -50,7 +54,7 @@ h2 {
     max-width: 30ch;
   }
 
- .to_left {
+  .to_left {
     grid-column: 3;
     display: flex;
     justify-content: flex-end;
@@ -63,7 +67,7 @@ h2 {
     width: 15%;
     height: 15%;
   }
-  
+
   #introvideo {
     margin-top: 40%;
     z-index: 100;
@@ -90,6 +94,7 @@ h2 {
   }
 
   .border1 {
+    display: block;
     position: absolute;
     transform: rotate(180deg);
     left: 40%;
