--- a/style.css
+++ b/style.css
@@ -168,13 +168,9 @@ hr {
   background-color: transparent;
   border: transparent;
   position: absolute;
-  top: 0;
-  left: 38%;
-  width: 30%;
-  height: 30%;
 }
 
-#introvideo {
+.linkmobile {
   margin-top: 60%;
   z-index: 100;
   padding-left: 1rem;
@@ -188,14 +184,18 @@ hr {
 
 .triangle_down {
   background-color: var(--dark-purple);
-  height: fit-content;
-  /* z-index: -1; */
-  /* height: 400px; */
   position: relative;
-  clip-path: polygon(0 0, 100% 0%, 100% 50%, 50% 100%, 0% 50%);
+  clip-path: polygon(0 0, 100% 0%, 100% 0%, 50% 100%, 0% 0%);
+  height: 300px;
+  z-index: -1;
   /* to make responsive change padding top and bottom for different media sizes */
-  padding-top: 10%;
-  padding-bottom: 40%;
+  /* padding-top: 10%;
+  padding-bottom: 40%; */
+}
+
+.triangle_middle {
+  background-color: var(--dark-purple);
+  height: fit-content;
 }
 
 .triangle_up {
@@ -205,6 +205,11 @@ hr {
   height: 300px;
   position: relative;
   clip-path: polygon(100% 100%, 100% 100%, 0% 100%, 0% 100%, 50% 0);
+}
+
+.no_triangle {
+  padding-top: 300px;
+  padding-bottom: 300px;
 }
 
 body {
@@ -575,7 +580,7 @@ article a {
 
   #one {
     padding-left: 10%;
-    z-index: -1;
+    z-index: 1;
   }
 
   footer {
