--- a/tema.css
+++ b/tema.css
@@ -15,6 +15,45 @@
     background-image: url(content/tema_2/img1.png);
   }
 }
+@keyframes galleri_2 {
+  0% {
+    background-image: url(content/tema_3/pitch/1.png);
+  }
+  10% {
+    background-image: url(content/tema_3/pitch/2.png);
+  }
+  20% {
+    background-image: url(content/tema_3/pitch/3.png);
+  }
+  30% {
+    background-image: url(content/tema_3/pitch/4.png);
+  }
+  40% {
+    background-image: url(content/tema_3/pitch/5.png);
+  }
+  50% {
+    background-image: url(content/tema_3/pitch/6.png);
+  }
+  60% {
+    background-image: url(content/tema_3/pitch/7.png);
+  }
+  70% {
+    background-image: url(content/tema_3/pitch/8.png);
+  }
+  80% {
+    background-image: url(content/tema_3/pitch/9.png);
+  }
+  90% {
+    background-image: url(content/tema_3/pitch/10.png);
+  }
+  100% {
+    background-image: url(content/tema_3/pitch/1.png);
+  }
+}
+
+#desktop_galleri1 img {
+  opacity: 0;
+}
 
 h2 {
   padding-left: 1rem;
@@ -25,16 +64,11 @@ h2 {
   display: none;
 }
 
-.border1 {
-  display: none;
-}
-.border2 {
-  display: none;
-}
-.border3 {
-  display: none;
-}
-.border4 {
+.border1,
+.border2,
+.border3,
+.border4,
+.border5 {
   display: none;
 }
 
@@ -53,9 +87,9 @@ h2 {
 }
 
 #arrow3 {
-  width: 100%;
-  height: 100%;
-  top: 40%;
+  width: 30%;
+  height: 30%;
+  top: 2090%;
   left: 38%;
 }
 
@@ -162,10 +196,52 @@ h2 {
   display: none;
 }
 
-#tema_2_1, #tema_2_2 {
+#tema_2_1,
+#tema_2_2 {
   padding-bottom: 400px;
 }
+#arrow_galleri1,
+#arrow_galleri2,
+#arrow_galleri3,
+#arrow_galleri4 {
+  display: none;
+}
 
+#arrow_system1,
+#arrow_system2,
+#arrow_system3,
+#arrow_system4 {
+  display: none;
+}
+
+.desktop_h3 {
+  display: none;
+}
+
+#desktop_galleri2 {
+  display: grid;
+  position: relative;
+  left: 13%;
+  animation-name: galleri_2;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  width: 70%;
+  background-size: contain;
+  border-style: ridge;
+  border-width: 5px;
+  border-top-color: var(--satin-sheen-gold);
+  border-left-color: var(--satin-sheen-gold);
+  border-bottom-color: var(--gold-metallic);
+  border-right-color: var(--gold-metallic);
+}
+
+#desktop_galleri2 img {
+  opacity: 0;
+}
+
+.padding_bottom {
+  padding-bottom: 40px;
+}
 @media screen and (min-width: 750px) {
   #tema1 {
     display: flex;
@@ -202,7 +278,8 @@ h2 {
     grid-template-rows: repeat(3, auto);
   }
 
-  #tema_2_1, #tema_2_2 {
+  #tema_2_1,
+  #tema_2_2 {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, auto);
@@ -218,7 +295,7 @@ h2 {
     max-width: 30ch;
   }
 
-  .to_left {
+  .to_right {
     grid-column: 3;
     display: flex;
     justify-content: flex-end;
@@ -239,6 +316,12 @@ h2 {
     height: 30%;
     left: 46%;
     top: 290%;
+  }
+  #arrow3 {
+    width: 30%;
+    height: 30%;
+    top: 1100%;
+    left: 45%;
   }
 
   .arrow_galleri {
@@ -312,6 +395,14 @@ h2 {
     top: 830%;
     width: 40%;
   }
+  .border5 {
+    display: block;
+    position: absolute;
+    transform: rotate(90deg);
+    left: 55%;
+    top: 1200%;
+    width: 40%;
+  }
 
   #galleritema2_wrapper {
     height: fit-content;
@@ -321,7 +412,7 @@ h2 {
   .link_small {
     font-size: 15pt;
   }
-
+  #mobile_galleri,
   #mobile_galleri1,
   #mobile_galleri2,
   #mobile_galleri3,
@@ -329,7 +420,7 @@ h2 {
     display: none;
   }
 
-  #desktop_galleri {
+  #desktop_galleri1 {
     display: grid;
     animation-name: galleri_1;
     animation-duration: 10s;
@@ -344,7 +435,7 @@ h2 {
     border-right-color: var(--gold-metallic);
   }
 
-  #desktop_galleri:hover {
+  #desktop_galleri1:hover {
     animation-play-state: paused;
   }
 
@@ -356,7 +447,8 @@ h2 {
 
   #arrow_system1 img,
   #arrow_system2 img,
-  #arrow_system3 img {
+  #arrow_system3 img,
+  #arrow_system4 img {
     width: 10%;
     padding-bottom: 100px;
     padding-top: 50px;
@@ -364,7 +456,8 @@ h2 {
 
   #arrow_system1,
   #arrow_system2,
-  #arrow_system3 {
+  #arrow_system3,
+  #arrow_system4 {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -376,5 +469,12 @@ h2 {
   #img_galleri3 {
     display: block;
     padding-bottom: 0;
+  }
+  .desktop_h3 {
+    display: block;
+  }
+
+  #nodesktop {
+    display: none;
   }
 }
